==> artfath/STM32/DPP_QXK_QPC/Core/Src/bsp.c <==
#include "qpc.h"                 // QP/C real-time embedded framework
#include "dpp.h"                 // DPP Application interface
#include "bsp.h"                 // Board Support Package
#include "stm32f4xx.h"  // CMSIS-compliant header file for the MCU used
#include "usart.h"
#include "gpio.h"
#include "string.h"
#include <stdio.h>
#define LD2_PIN  5U
#define B1_PIN  13U

Q_NORETURN Q_onError(char const * const module, int_t const id) {
    // NOTE: this implementation of the assertion handler is intended only
    // for debugging and MUST be changed for deployment of the application
    // (assuming that you ship your production code with assertions enabled).
    Q_UNUSED_PAR(module);
    Q_UNUSED_PAR(id);
    QS_ASSERTION(module, id, 10000U);

#ifndef NDEBUG
    // light up the user LED
    HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);  // turn LED on
    // for debugging, hang on in an endless loop...
    for (;;) {
    }
#endif

    NVIC_SystemReset();
}

void BSP_init(void) {
    // Configure the MPU to prevent NULL-pointer dereferencing ...
//    MPU->RBAR = 0x0U                          // base address (NULL)
//                | MPU_RBAR_VALID_Msk          // valid region
//                | (MPU_RBAR_REGION_Msk & 7U); // region #7
//    MPU->RASR = (7U << MPU_RASR_SIZE_Pos)     // 2^(7+1) region
//                | (0x0U << MPU_RASR_AP_Pos)   // no-access region
//                | MPU_RASR_ENABLE_Msk;        // region enable
//    MPU->CTRL = MPU_CTRL_PRIVDEFENA_Msk       // enable background region
//                | MPU_CTRL_ENABLE_Msk;        // enable the MPU
//    __ISB();
//    __DSB();

    // NOTE: SystemInit() has been already called from the startup code
    // but SystemCoreClock needs to be updated
//    SystemCoreClockUpdate();

    // enable GPIOA clock port for the LED LD2
//    RCC->AHBENR |= (1U << 0);

    // configure LED (PA.5) pin as push-pull output, no pull-up, pull-down
//    GPIOA->MODER   &= ~((3U << 2U*LD2_PIN));
//    GPIOA->MODER   |=  ((1U << 2U*LD2_PIN));
//    GPIOA->OTYPER  &= ~((1U <<    LD2_PIN));
//    GPIOA->OSPEEDR &= ~((3U << 2U*LD2_PIN));
//    GPIOA->OSPEEDR |=  ((1U << 2U*LD2_PIN));
//    GPIOA->PUPDR   &= ~((3U << 2U*LD2_PIN));

    // enable GPIOC clock port for the Button B1
//    RCC->AHBENR |=  (1U << 2);

    // configure Button (PC.13) pins as input, no pull-up, pull-down
//    GPIOC->MODER   &= ~(3U << 2U*B1_PIN);
//    GPIOC->OSPEEDR &= ~(3U << 2U*B1_PIN);
//    GPIOC->OSPEEDR |=  (1U << 2U*B1_PIN);
//    GPIOC->PUPDR   &= ~(3U << 2U*B1_PIN);
    /* Reset of all peripherals, Initializes the Flash interface and the Systick. */
    HAL_Init();

    /* Configure the system clock */
    SystemClock_Config();


    /* Initialize all configured peripherals */
    MX_GPIO_Init();
    MX_USART2_UART_Init();

    BSP_randomSeed(1234U); // seed the random number generator

    // initialize the QS software tracing...
    if (!QS_INIT((void *)0)) {
        Q_ERROR();
    }

    // dictionaries...
    QS_OBJ_DICTIONARY(&l_SysTick_Handler);
    QS_OBJ_DICTIONARY(&l_EXTI9_5_IRQHandler);
    QS_USR_DICTIONARY(PHILO_STAT);
    QS_USR_DICTIONARY(PAUSED_STAT);
    QS_USR_DICTIONARY(CONTEXT_SW);

    QS_ONLY(produce_sig_dict());

    // setup the QS filters...
    QS_GLB_FILTER(QS_ALL_RECORDS);   // all records
    QS_GLB_FILTER(-QS_QF_TICK);      // exclude the clock tick
}

void BSP_start(void) {
    // initialize event pools
    static QF_MPOOL_EL(TableEvt) smlPoolSto[2*N_PHILO];
    QF_poolInit(smlPoolSto, sizeof(smlPoolSto), sizeof(smlPoolSto[0]));

    // initialize publish-subscribe
    static QSubscrList subscrSto[MAX_PUB_SIG];
    QActive_psInit(subscrSto, Q_DIM(subscrSto));

    // instantiate and start AOs/threads...
    static QEvt const *xThread1QueueSto[5];
    static uint64_t xThread1StackSto[64];
    XThread1_ctor();
    QXTHREAD_START(TH_XThread1,
        1U,                          // QP priority of the thread
        xThread1QueueSto,            // event queue storage
        Q_DIM(xThread1QueueSto),     // event length [events]
        xThread1StackSto,            // stack storage
        sizeof(xThread1StackSto),    // stack size [bytes]
        (void *)0);                  // no initialization param

    static QEvt const *philoQueueSto[N_PHILO][10];
    for (uint8_t n = 0U; n < N_PHILO; ++n) {
        Philo_ctor(n);
        QACTIVE_START(AO_Philo[n],
            n + 3U,                  // QF-prio/pthre. see NOTE1
            philoQueueSto[n],        // event queue storage
            Q_DIM(philoQueueSto[n]), // queue length [events]
            (void *)0, 0U,           // no stack storage
            (void *)0);              // no initialization param
    }

    static QEvt const *xThread2QueueSto[5];
    static uint64_t xThread2StackSto[64];
    XThread2_ctor();
    QXTHREAD_START(TH_XThread2,
        N_PHILO + 5U,                // QP priority of the thread
        xThread2QueueSto,            // event queue storage
        Q_DIM(xThread2QueueSto),     // event length [events]
        xThread2StackSto,            // stack storage
        sizeof(xThread2StackSto),    // stack size [bytes]
        (void *)0);                  // no initialization param

    static QEvt const *tableQueueSto[N_PHILO];
    Table_ctor();
    QACTIVE_START(AO_Table,
        N_PHILO + 7U,                // QP prio. of the AO
        tableQueueSto,               // event queue storage
        Q_DIM(tableQueueSto),        // queue length [events]
        (void *)0, 0U,               // no stack storage
        (void *)0);                  // no initialization param
}

void BSP_ledOn(void) {
	HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET); // turn LED on
}

void BSP_ledOff(void) {
	HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);  // turn LED off
}

void QF_onStartup(void) {
    // set up the SysTick timer to fire at BSP_TICKS_PER_SEC rate
    SysTick_Config(SystemCoreClock / BSP_TICKS_PER_SEC);

    // assign all priority bits for preemption-prio. and none to sub-prio.
    // NOTE: this might have been changed by STM32Cube.
    NVIC_SetPriorityGrouping(0U);

    // set priorities of ALL ISRs used in the system, see NOTE1
    NVIC_SetPriority(USART2_IRQn,    0U); // kernel UNAWARE interrupt
    NVIC_SetPriority(EXTI9_5_IRQn,   QF_AWARE_ISR_CMSIS_PRI + 0U);
    NVIC_SetPriority(SysTick_IRQn,   QF_AWARE_ISR_CMSIS_PRI + 1U);
    // ...

    // enable IRQs...
    NVIC_EnableIRQ(EXTI9_5_IRQn);

#ifdef Q_SPY
    NVIC_EnableIRQ(USART2_IRQn); // UART2 interrupt used for QS-RX
#endif
}

uint8_t QS_onStartup(void const *arg) {
    Q_UNUSED_PAR(arg);

    static uint8_t qsTxBuf[2*1024]; // buffer for QS-TX channel
    QS_initBuf(qsTxBuf, sizeof(qsTxBuf));

    static uint8_t qsRxBuf[100];    // buffer for QS-RX channel
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    // enable peripheral clock for USART2
    RCC->AHBENR  |= ( 1U <<  0U);  // Enable GPIOA clock
    RCC->APB1ENR |= ( 1U << 17U);  // Enable USART#2 clock

    // Configure PA3 to USART2_RX, PA2 to USART2_TX
    GPIOA->AFR[0] &= ~((15U << 4U*USART2_RX_PIN) | (15U << 4U*USART2_TX_PIN));
    GPIOA->AFR[0] |=  (( 7U << 4U*USART2_RX_PIN) | ( 7U << 4U*USART2_TX_PIN));
    GPIOA->MODER  &= ~(( 3U << 2U*USART2_RX_PIN) | ( 3U << 2U*USART2_TX_PIN));
    GPIOA->MODER  |=  (( 2U << 2U*USART2_RX_PIN) | ( 2U << 2U*USART2_TX_PIN));

    USART2->BRR  = __USART_BRR(SystemCoreClock, 115200U);  // baud rate
    USART2->CR3  = 0x0000U;         // no flow control
    USART2->CR2  = 0x0000U;         // 1 stop bit
    USART2->CR1  = ((1U <<  2U) |   // enable RX
                    (1U <<  3U) |   // enable TX
                    (1U <<  5U) |   // enable RX interrupt
                    (0U << 12U) |   // 8 data bits
                    (0U << 28U) |   // 8 data bits
                    (1U << 13U));   // enable USART

    QS_tickPeriod_ = SystemCoreClock / BSP_TICKS_PER_SEC;
    QS_tickTime_ = QS_tickPeriod_; // to start the timestamp at zero

    return 1U; // return success
}

void QS_onFlush(void) {
    for (;;) {
        uint16_t b = QS_getByte();
        if (b != QS_EOD) {
            while ((USART2->SR & (1U << 7U)) == 0U) { // while TXE not empty
            }
            USART2->DR = b; // put into the DR register
        }
        else {
            break;
        }
    }
}
